syntax = "proto3";

service EventMapper {
	rpc CreateEvent(EventRequest) returns (EventResponse) {}
}

message Event {
	string sender_name = 1;
	string source_id = 2;
	string source_type = 3;
	string event_name = 4;
	string event_target = 5;
	string user_id = 6;
	int32 created_at = 7;
	map<string, string> params = 8;
}

message EventRequest {
	string user_token = 1;
	string r_key = 2;
	Event event = 3;
}

message EventResponse {
	bool is_ok = 1;
	string status = 2;
}
